restore maven-compiler-plugin