@@ -51,6 +51,16 @@
           <version>3.1.0</version>
         </plugin>
         <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.10.1</version>
+          <configuration>
+            <compilerArgs>
+              <arg>--add-exports</arg>
+              <arg>javafx.graphics/com.sun.glass.ui=com.andrei</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.8</version>
